 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 *
 * CHANGELOG version: $Id$
 */
Version 2.1.3.5
        - 2 new actions: projectviewer_parent-group, projectviewer_set-active     [alan ezust]
        
VERSION 2.1.3.4:
	[marcelo vanzin]
		- fix RootImporter.java: was trying to remove empty directories
		  twice.
		- remove uses of gnu.regexp, using java.util.regex instead; PV
		  now requires Java 1.4.
		- use JAXP instead of com.microstar.xml for parsing the config
		  files. WARNING: this breaks API compatibility (class NodeHandler).
		  Since I don't think anyone uses that, I'm going forward with it
		  on a minor release anyway.

VERSION 2.1.3.3:
	[marcelo vanzin]
		- better handle the PV dockable being closed; old code was more
		  prone to not freeing memory that could be freed.
		- fix SF bug # 1493976: when re-importing, need to check if the
		  VPTDirectory.getFile() is under the old root, since getNodePath()
		  is changed when the directory doesn't exist anymore.

VERSION 2.1.3.2:
	[marcelo vanzin]
		- fix IconComposer again: fix in 2.1.3.1 disabled icon composing
		  altogether.

VERSION 2.1.3.1:
	[marcelo vanzin]
		- fix IconComposer: VFSFile provides null as the file argument
		  when asking for the status icon, and this was causing an NPE.

VERSION 2.1.3:
	[marcelo vanzin]
		- added filtered view contributed by Rudolf Widmann
		- some cosmetic/usability changes to external app config pane
		  (also done for filter config pane)
		- fix a nasty problem in the base64 decoding function: padding
		  was not being ignored when decoding encoded string.
		- fix more AWT thread-safety issues.
		- add a scroll bar to the config pane.